--- a/.travis.yml
+++ b/.travis.yml
@@ -60,32 +60,7 @@ before_install:
     - pip --version
     - pip install --upgrade pip
     - pip --version
-    # keyring is required to provide GitHub token to EasyBuild;
-    # keyring v5.7.1 is last version to be compatible with py2.6;
-    # for recent versions of keyring, keyrings.alt must be installed too
-    - if [ "x$TRAVIS_PYTHON_VERSION" == 'x2.6' ]; then pip install keyring==5.7.1; else pip install 'keyring<=9.1' keyrings.alt; fi
-    # GitPython 2.x may no longer be compatible with py2.6
-    - if [ "x$TRAVIS_PYTHON_VERSION" == 'x2.6' ]; then pip install 'GitPython<2.0'; else pip install GitPython; fi
-    # pydot (dep for python-graph-dot) 1.2.0 and more recent doesn't work with Python 2.6
-    - if [ "x$TRAVIS_PYTHON_VERSION" == 'x2.6' ]; then pip install pydot==1.1.0; else pip install pydot; fi
-    # pycparser 2.19 (dep for paramiko) doesn't work with Python 2.6
-    - if [ "x$TRAVIS_PYTHON_VERSION" == 'x2.6' ]; then pip install 'pycparser<2.19'; fi
-    # idna 2.8 (dep for paramiko) & more recent doesn't work with Python 2.6
-    - if [ "x$TRAVIS_PYTHON_VERSION" == 'x2.6' ]; then pip install 'idna<2.8'; fi
-    # paramiko 2.4.0 (dep for GC3Pie) & more recent doesn't work with Python 2.6
-    - if [ "x$TRAVIS_PYTHON_VERSION" == 'x2.6' ]; then pip install 'paramiko<2.4.0'; fi
-    # SQLAlchemy 1.2.0 (dep for GC3Pie) & more recent doesn't work with Python 2.6
-    - if [ "x$TRAVIS_PYTHON_VERSION" == 'x2.6' ]; then pip install 'SQLAlchemy<1.2.0'; fi
-    # python 2.0 (dep for GC3Pie) & more recent doesn't work with Python 2.6
-    - if [ "x$TRAVIS_PYTHON_VERSION" == 'x2.6' ]; then pip install 'python-daemon<2.0'; fi
-    # autopep8 1.3.4 is last one to support Python 2.6
-    - if [ "x$TRAVIS_PYTHON_VERSION" == 'x2.6' ]; then pip install 'autopep8<1.3.5'; else pip install autopep8; fi
-    # PyYAML 5.x no longer supports Python 2.6
-    - if [ "x$TRAVIS_PYTHON_VERSION" == 'x2.6' ]; then pip install 'PyYAML<5.0'; else pip install PyYAML; fi
-    # optional Python packages for EasyBuild (GC3Pie is not compatible with Python 3 yet)
-    - if [ ! "x$TRAVIS_PYTHON_VERSION" =~ x3.[0-9] ]; then pip install GC3Pie; fi
-    # optional Python packages for EasyBuild
-    - pip install pycodestyle python-graph-dot python-hglib requests
+    - pip install -r requirements.txt
     # git config is required to make actual git commits (cfr. tests for GitRepository)
     - git config --global user.name "Travis CI"
     - git config --global user.email "travis@travis-ci.org"
