--- a/etc/cray_external_modules_metadata.cfg
+++ b/etc/cray_external_modules_metadata.cfg
@@ -1,4 +1,4 @@
-# metadata useful to EasyBuild (hpcugent.github.io/easybuild) for modules provided by Cray on Cray systems
+# metadata useful to EasyBuild (easybuilders.github.io/easybuild) for modules provided by Cray on Cray systems
 # authors: Guilherme Peretti-Pezzi (CSCS), Petar Forai (IMP/IMBA), Kenneth Hoste (HPC-UGent), Eirini Koutsaniti (CSCS)
 
 [cray-fftw/3.3.6.2]
