enable installation of GC3Pie for Python 3 in requirements.txt, since GC3Pie 2.6.0 supports Python 3

--- a/requirements.txt
+++ b/requirements.txt
@@ -36,13 +36,13 @@ autopep8; python_version >= '2.7'
 PyYAML<5.0; python_version < '2.7'
 PyYAML; python_version >= '2.7'
 
-# optional Python packages for EasyBuild (GC3Pie is not compatible with Python 3 yet)
-GC3Pie; python_version < '3.0'
+# optional Python packages for EasyBuild
 
-# optional Python packages for EasyBuild -- flake8 is a superset of pycodestyle
+# flake8 is a superset of pycodestyle
 pycodestyle; python_version < '2.7'
 flake8; python_version >= '2.7'
 
+GC3Pie
 python-graph-dot
 python-hglib
 requests
