--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -11,7 +11,7 @@ jobs:
         module_syntax: [Lua, Tcl]
         # exclude some configuration for non-Lmod modules tool:
         # - don't test with Lua module syntax (only supported in Lmod)
-        # - don't test with Python 3.5 and 3.7 (only with 2.7 and 3.6), to limit test configurations
+        # - exclude Python 3.x versions other than 3.6, to limit test configurations
         exclude:
           - modules_tool: modules-tcl-1.147
             module_syntax: Lua
@@ -23,14 +23,20 @@ jobs:
             python: 3.5
           - modules_tool: modules-tcl-1.147
             python: 3.7
+          - modules_tool: modules-tcl-1.147
+            python: 3.8
           - modules_tool: modules-3.2.10
             python: 3.5
           - modules_tool: modules-3.2.10
             python: 3.7
+          - modules_tool: modules-3.2.10
+            python: 3.8
           - modules_tool: modules-4.1.4
             python: 3.5
           - modules_tool: modules-4.1.4
             python: 3.7
+          - modules_tool: modules-4.1.4
+            python: 3.8
       fail-fast: false
     steps:
     - uses: actions/checkout@v1
