keep testing single configuration in Travis CI with Lmod 6.5.1

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,9 @@ matrix:
     - python: 2.6
       env: LMOD_VERSION=7.8.22
       dist: trusty
+    # single configuration to test with Lmod 6 and Python 2.7
+    - python: 2.7
+      env: LMOD_VERSION=6.5.1
     # also test with Python 3.6
     - python: 3.6
       env: LMOD_VERSION=7.8.22
