--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ matrix:
   include:
     # also test default configuration with Python 2.6
     - python: 2.6
-      env: LMOD_VERSION=7.8.22
+      env: LMOD_VERSION=7.8.22 TEST_EASYBUILD_SILENCE_DEPRECATION_WARNINGS=Python26
       dist: trusty
     # single configuration to test with Lmod 6 and Python 2.7
     - python: 2.7
