--- a/setup.cfg
+++ b/setup.cfg
@@ -19,4 +19,5 @@ builtins =
 
 # ignore "Black would make changes" produced by flake8-black
 # see also https://github.com/houndci/hound/issues/1769
-ignore = BLK100
+# and restore current flake8 default list (Feb2020)
+ignore = BLK100,E121,E123,E126,E226,E24,E704,W503,W504
