--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,8 @@ before_install:
     - pip --version
     - pip install --upgrade pip
     - pip --version
-    - pip install coveralls
+    # coveralls doesn't support Python 2.6 anymore, so don't try to install it when testing with Python 2.6
+    - if [ "x$TRAVIS_PYTHON_VERSION" != 'x2.6' ]; then pip install coveralls; fi    
     - pip install -r requirements.txt
     # git config is required to make actual git commits (cfr. tests for GitRepository)
     - git config --global user.name "Travis CI"
@@ -89,10 +90,10 @@ script:
     # create file owned by root but writable by anyone (used by test_copy_file)
     - sudo touch /tmp/file_to_overwrite_for_easybuild_test_copy_file.txt
     - sudo chmod o+w /tmp/file_to_overwrite_for_easybuild_test_copy_file.txt
-    # run test suite
-    - coverage run -m test.framework.suite
-    # ignore errors, since tests inject easyblocks for which there are no source files anymore after the tests have run
-    - coverage report -m --ignore-errors
+    # run coverage on all travis builds except for Python 2.6
+    - if [ "x$TRAVIS_PYTHON_VERSION" != 'x2.6' ]; then coverage run -m test.framework.suite; coverage report -m --ignore-errors; fi  
+    # invoke the regression test for Python 2.6 the original way without coverage
+    - if [ "x$TRAVIS_PYTHON_VERSION" == 'x2.6' ]; then python -O -m test.framework.suite 2>&1 | tee test_framework_suite.log; fi
     # try and make sure output of running tests is clean (no printed messages/warnings)
     - IGNORE_PATTERNS="no GitHub token available|skipping SvnRepository test|lib/python2.6/site-packages|requires Lmod as modules tool"
     # '|| true' is needed to avoid that Travis stops the job on non-zero exit of grep (i.e. when there are no matches)
@@ -113,4 +114,5 @@ script:
     - module use /tmp/$TRAVIS_JOB_ID/eb_bootstrap/modules/all
     - module load EasyBuild; eb --version
 after_success:
-  - coveralls
+  - if [ "x$TRAVIS_PYTHON_VERSION" != 'x2.6' ]; then coveralls; fi  
+  
