--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -49,14 +49,16 @@ jobs:
 
     - name: install OS & Python packages
       run: |
+        # note: using 'apt-get -o Acquire::Retries=3' to dance around connectivity issues to Azure,
+        # see https://github.com/actions/virtual-environments/issues/675
         # for modules tool
-        sudo apt-get install lua5.2 liblua5.2-dev lua-filesystem lua-posix tcl tcl-dev
+        sudo apt-get -o Acquire::Retries=3 install lua5.2 liblua5.2-dev lua-filesystem lua-posix tcl tcl-dev
         # fix for lua-posix packaging issue, see https://bugs.launchpad.net/ubuntu/+source/lua-posix/+bug/1752082
         sudo ln -s /usr/lib/x86_64-linux-gnu/lua/5.2/posix_c.so /usr/lib/x86_64-linux-gnu/lua/5.2/posix.so
         # for GitPython, python-hglib
-        sudo apt-get install git mercurial
+        sudo apt-get -o Acquire::Retries=3 install git mercurial
         # dep for GC3Pie
-        sudo apt-get install time
+        sudo apt-get -o Acquire::Retries=3 install time
         # Python packages
         pip --version
         pip install --upgrade pip
